Enhance footer with red heart icon and brand color hover effects

--- a/index.html
+++ b/index.html
@@ -229,12 +229,14 @@
     <footer class="footer">
       <div class="container">
         <div class="footer-content">
-          <p>&copy; 2025 Hritik. All rights reserved.</p>
+          <p>&copy; 2025 Made with <i class="fas fa-heart" style="color: #e53e3e;"></i> by Hritik. All rights reserved.</p>
           <div class="social-links">
-            <a href="#"><i class="fab fa-github"></i></a>
-            <a href="#"><i class="fab fa-linkedin"></i></a>
-            <a href="#"><i class="fab fa-twitter"></i></a>
-          </div>
+            <a href="https://github.com/hritiksingh66"><i class="fab fa-github"></i></a>
+            <a href="https://www.linkedin.com/in/hritik-kumar-y2026/"><i class="fab fa-linkedin"></i></a>
+            <a href="https://www.instagram.com/hritiksuryavanshi/" target="_blank" rel="noopener noreferrer">
+  <i class="fab fa-instagram"></i> 
+</a>
+
         </div>
       </div>
     </footer>
