Final portfolio enhancements and production-ready features

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <nav class="navbar">
       <div class="nav-container">
-        <div class="nav-logo">Hritik</div>
+        <div class="nav-logo">Hritik Kumar</div>
         <ul class="nav-menu">
           <li><a href="#home">Home</a></li>
           <li><a href="#about">About</a></li>
@@ -32,9 +32,9 @@
 
     <section id="home" class="hero">
       <div class="hero-content">
-        <h1>Hi, I'm <span>Hritik</span></h1>
-        <h2>Full Stack Developer</h2>
-        <p>I create amazing web experiences with modern technologies</p>
+        <h1>Hi, I'm <span>Hritik Kumar</span></h1>
+        <h2>Full Stack Developer | DSA Enthusiast</h2>
+        <!-- <p>I create amazing web experiences with modern technologies</p> -->
         <div class="hero-buttons">
           <a href="#projects" class="btn primary">View My Work</a>
           <a href="#contact" class="btn secondary">Get In Touch</a>
@@ -48,22 +48,16 @@
         <div class="about-content">
           <div class="about-image">
             <img
-              src="https://via.placeholder.com/300x400/4a5568/ffffff?text=Your+Photo"
+              src="images/profile.jpg"
               alt="Profile Photo"
             />
           </div>
           <div class="about-text">
             <p>
-              I'm a passionate Full-Stack Developer with a strong foundation in
-              Data Structures and Algorithms. With expertise in both frontend
-              and backend technologies, I enjoy building efficient and scalable
-              web applications.
+              I'm a passionate Full-Stack Developer skilled in Java, JavaScript, and the MERN stack. With strong problem-solving abilities in Data Structures and Algorithms, I enjoy creating scalable and dynamic web applications.
             </p>
             <p>
-              My journey in tech also includes a deep interest in cybersecurity,
-              where I've earned certifications and practical experience. When
-              I'm not coding, you can find me exploring new technologies or
-              solving complex problems.
+             My journey also includes hands-on project experience and certifications in modern technologies. Beyond coding, I’m driven by continuous learning, whether building impactful solutions or exploring new technical challenges.
             </p>
             <div class="about-buttons">
               <a href="https://drive.google.com/file/d/1yDmQqitAiHypbAlW6WWZ6GZwDCAiLGll/view?usp=drive_link" class="btn download"
