--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
               <img src="https://via.placeholder.com/400x250" alt="Project 2" />
             </div>
             <div class="project-content">
-              <h3>Task Management App</h3>
+              <h3>File Sharing Web application</h3>
               <p>Collaborative task management with real-time updates</p>
               <div class="project-tech">
                 <span>Vue.js</span>
@@ -175,8 +175,8 @@
                 <span>Socket.io</span>
               </div>
               <div class="project-links">
-                <a href="#" class="btn-small">Live Demo</a>
-                <a href="#" class="btn-small">GitHub</a>
+                <a href="https://file-sharing-mini-project-1.onrender.com" class="btn-small">Live Demo</a>
+                <a href="https://github.com/hritiksingh66/File-Sharing-Mini-Project/tree/main" class="btn-small">GitHub</a>
               </div>
             </div>
           </div>
