Added new Project File Sharing System to Our Project Section

--- a/index.html
+++ b/index.html
@@ -164,19 +164,20 @@
           </div>
           <div class="project-card">
             <div class="project-image">
-              <img src="https://via.placeholder.com/400x250" alt="Project 2" />
+              <img src="images/file-sharing-image.png" alt="Project 2" />
             </div>
             <div class="project-content">
-              <h3>Task Management App</h3>
-              <p>Collaborative task management with real-time updates</p>
+              <h3>File Sharing Web Application</h3>
+              <p>A MERN stack web app that lets users upload files, generate shareable download links, and share them easily.
+</p>
               <div class="project-tech">
-                <span>Vue.js</span>
-                <span>Firebase</span>
-                <span>Socket.io</span>
+                <span>Multer</span>
+                <span>MongoDB</span>
+                <span>React.js</span>
               </div>
               <div class="project-links">
-                <a href="#" class="btn-small">Live Demo</a>
-                <a href="#" class="btn-small">GitHub</a>
+                <a href="https://file-sharing-mini-project-1.onrender.com" class="btn-small">Live Demo</a>
+                <a href="https://github.com/hritiksingh66/File-Sharing-Mini-Project/tree/main" class="btn-small">GitHub</a>
               </div>
             </div>
           </div>
