--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
         <div class="projects-grid">
           <div class="project-card">
             <div class="project-image">
-              <img src="https://via.placeholder.com/400x250" alt="Project 1" />
+              <img src="images/eCommerce-Website.jpg" alt="Project 1" />
             </div>
             <div class="project-content">
               <h3>E-Commerce Platform</h3>
@@ -183,19 +183,19 @@
           </div>
           <div class="project-card">
             <div class="project-image">
-              <img src="https://via.placeholder.com/400x250" alt="Project 3" />
+              <img src="images/portfolio.jpg" alt="Project 3" />
             </div>
             <div class="project-content">
-              <h3>Weather Dashboard</h3>
-              <p>Real-time weather data with interactive charts</p>
+              <h3>PortFolio Website</h3>
+              <p>Showcasing my journey as a Full-Stack Developer through projects, skills, and passion for building efficient, scalable web applications.</p>
               <div class="project-tech">
                 <span>JavaScript</span>
-                <span>Chart.js</span>
-                <span>API</span>
+                <span>HTML</span>
+                <span>CSS</span>
               </div>
               <div class="project-links">
-                <a href="#" class="btn-small">Live Demo</a>
-                <a href="#" class="btn-small">GitHub</a>
+                <a href="https://hritiksingh66.github.io/portfolio-website/" class="btn-small">Live Demo</a>
+                <a href="https://github.com/hritiksingh66/portfolio-website" class="btn-small">GitHub</a>
               </div>
             </div>
           </div>
