Added new project image

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
           </div>
           <div class="project-card">
             <div class="project-image">
-              <img src="images/file-sharing-image.png" alt="Project 2" />
+              <img src="images/fileshare.webp" alt="Project 2" />
             </div>
             <div class="project-content">
               <h3>File Sharing Web Application</h3>
