Added a new project BagBazaar under Project section

--- a/index.html
+++ b/index.html
@@ -146,19 +146,20 @@
         <div class="projects-grid">
           <div class="project-card">
             <div class="project-image">
-              <img src="images/eCommerce-Website.jpg" alt="Project 1" />
+              <img src="images/BagBazaar.png" alt="Project 1" />
             </div>
             <div class="project-content">
-              <h3>E-Commerce Platform</h3>
-              <p>Full-stack e-commerce solution with React and Node.js</p>
+              <h3>BagBazaar</h3>
+              <p>BagBazaar is a premium e-commerce site for high-quality handbags. Built with Node.js, MongoDB Atlas, and EJS, it delivers a sleek shopping experience for fashion lovers seeking style and elegance.</p>
               <div class="project-tech">
-                <span>React</span>
+                <span>JavaScript</span>
                 <span>Node.js</span>
                 <span>MongoDB</span>
+                <span>Multer</span>
               </div>
               <div class="project-links">
-                <a href="#" class="btn-small">Live Demo</a>
-                <a href="#" class="btn-small">GitHub</a>
+                <a href="https://bagbazaar-bice.vercel.app/" class="btn-small">Live Demo</a>
+                <a href="https://github.com/hritiksingh66/BagBazaar" class="btn-small">GitHub</a>
               </div>
             </div>
           </div>
