Added a new project BagBazaar under Project section

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
             </div>
             <div class="project-content">
               <h3>BagBazaar</h3>
-              <p>BagBazaar is a premium e-commerce site for high-quality handbags. Built with Node.js, MongoDB Atlas, and EJS, it delivers a sleek shopping experience for fashion lovers seeking style and elegance.</p>
+              <p>BagBazaar is a premium e-commerce site for high-quality handbags. It delivers a sleek shopping experience for fashion lovers seeking style and elegance.</p>
               <div class="project-tech">
                 <span>JavaScript</span>
                 <span>Node.js</span>
